<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>limo_car</name>
  <version>1.0.0</version>
  <description>the package for limo_simulation</description>
  <maintainer email="lz554113510@gmail.com">zhui li</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
	
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>
  <depend>gazebo</depend>
  <depend>libgazebo_ros</depend>
  <depend>rqt_robot_steering</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
